--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
     "grunt-nodemon": "~0.3.0",
     "grunt-spritesmith": "~3.5.0",
     "icalendar": "git://github.com/lefnire/node-icalendar#master",
+    "image-size": "~0.3.2",
     "in-app-purchase": "^0.2.0",
     "jade": "~1.7.0",
     "js2xmlparser": "~0.1.2",
-    "lodash": "~2.4.1",
-    "image-size": "~0.3.2",
+    "lodash": "~3.8.0",
     "loggly": "~1.0.8",
     "method-override": "~2.2.0",
     "moment": "~2.8.3",
-    "mongoose": "~3.8.23",
+    "mongoose": "~4.0.1",
     "mongoose-id-autoinc": "~2013.7.14-4",
+    "mongoose-reverse-populate": "^0.1.0",
     "nconf": "~0.6.9",
     "newrelic": "~1.11.2",
     "nib": "~1.0.1",
